--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,21 +5,24 @@
             "type": "cppbuild",
             "label": "C/C++: gcc build active file",
             "command": "/usr/bin/gcc",
-            "args": [
+            "args": 
+            [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
-                
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
-            "options": {
+            "options": 
+            {
                 "cwd": "${fileDirname}"
             },
-            "problemMatcher": [
+            "problemMatcher": 
+            [
                 "$gcc"
             ],
-            "group": {
+            "group": 
+            {
                 "kind": "build",
                 "isDefault": true
             },
