--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,25 @@
 {
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [
+        {
+            "name": "Run main.c",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/main.c",
+            "args": ["input_file.txt", "output_file.txt"], // Default input and output file names
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "gcc build main"
+        }
+    ]
 }
