--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
             ],
             "options": 
             {
-                "cwd": "${fileDirname}/main.c"
+                "cwd": "${fileDirname}/main"
             },
             "problemMatcher": 
             [
